--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  <div id="flashes">
+    <% flash.each do |type, message| %>
+    <%= content_tag :div, message, class: type %>
+    <% end %>
+  </div>
+
   <body>
     <%= yield %>
   </body>
